[tool.poetry]
name = "quadruplex-generator"
version = "1.0.0"
description = ""
authors = ["Patrik Kaura <patrik.kaura@firma.seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.7.1"
exrex = "^0.10.5"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
